<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Great Diary</string>
    <string name="action_settings">Settings</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="blog">Blog</string>
    <string name="notes">Notes</string>
    <string name="pictures">Pictures</string>
    <string name="new_entree">New Entree</string>
    <string name="menu">Menu</string>
    <string name="title">Title</string>
    <string name="help_title">Write here your title down &#8230;</string>
    <string name="date">02/11/2013</string>
    <string name="time">18:44</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help_event">Write here your events down &#8230;</string>
    <string name="picture">Take picture</string>
    <string name="camera">Camera button</string>
    <string name="album">Photo Album</string>
    <string name="info_text">Picture take on:</string>
    <string name="new_note">New Note</string>
    <string name="help_note">Write here your note down &#8230;</string>
    <string name="title_activity_blog">BlogActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_blog">New Blog</string>
    <string name="title_activity_blog_detail">Detail Entree</string>
    <string name="title_activity_photo_overview">Photo Overview</string>
    <string name="title_activity_photo_detail">Detail Photo</string>
    <string name="title_activity_new_note">New Note</string>
    <string name="title_activity_note">Notes</string>
	<string name="username">username</string>
</resources>
