    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/new_entree_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/new_entree"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray"
            android:textSize="@dimen/large_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray"
            android:textSize="@dimen/medium_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gray"
            android:ems="10"
            android:hint="@string/help_event"
            android:padding="10dp"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <ImageButton
                    android:id="@+id/photo_button"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:contentDescription="@string/camera"
                    android:onClick="onClick"  />

                <TextView
                    android:id="@+id/photo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/picture"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menubutton_white"
                    android:text="@string/cancel"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/normal_text"
                    android:onClick="onClick"  
                    android:minWidth="60dp"
                    android:minHeight="60dp"/>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/menubutton"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text"
                    android:onClick="onClick"  
                    android:minWidth="60dp"
                    android:minHeight="60dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>