<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/new_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/new_note"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gray"
        android:textSize="@dimen/large_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/title_field"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
		android:padding="10dp"
        android:background="@drawable/background_gray"
        android:ems="10"
        android:hint="@string/help_title"
        android:textColor="@color/gray" />

    <EditText
        android:id="@+id/content_field"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:padding="10dp"
        android:background="@drawable/background_gray"
        android:ems="10"
        android:hint="@string/help_note"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal" >



            <Button
                android:id="@+id/cancelButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/menubutton_white"
                android:text="@string/cancel"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/normal_text" />

            <Button
                android:id="@+id/newEntreeButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/menubutton"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

</LinearLayout>