<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestActivity" >

    <TextView
        android:id="@+id/blog_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/content_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/new_entree"
        android:textColor="@color/gray" />

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="133dp"
        android:layout_height="145dp"
        android:contentDescription="@string/camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/back"
                android:src="@drawable/previous_button"
                android:onClick="onClick"  />

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:contentDescription="@string/forward"
                android:onClick="onClick"
                android:src="@drawable/next_button" />

        </LinearLayout>

        <Button
            android:id="@+id/back_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/menubutton"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            android:onClick="onClick"  />

    </LinearLayout>

</LinearLayout>