<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewNoteActivity" >

    <TextView
        android:id="@+id/new_note_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.5"
        android:text="@string/new_note"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gray"
        android:textSize="@dimen/large_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/title_field"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.0"
        android:background="@drawable/background_gray"
        android:ems="10"
        android:hint="@string/help_title"
        android:padding="10dp"
        android:textColor="@color/gray" />

    <EditText
        android:id="@+id/content_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@drawable/background_gray"
        android:ems="10"
        android:hint="@string/help_note"
        android:padding="10dp"
        android:textColor="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="top"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_button2"
            android:minHeight="36dp"
            android:minWidth="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/menubutton_white"
            android:onClick="onClick"
            android:text="@string/cancel"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/normal_text" />

        <Button
            android:id="@+id/save_button2"
			android:minHeight="36dp"
            android:minWidth="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/cancel_button2"
            android:background="@drawable/menubutton"
            android:onClick="onClick"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text" />

    </RelativeLayout>

</LinearLayout>