<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestActivity" 
    android:background="@color/dark_gray">

    <TextView
        android:id="@+id/photo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/huge_title"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/photo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" 
        >

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
            android:text="@string/info_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            android:layout_above="@id/blog_date"/>

        <TextView
            android:id="@+id/blog_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_gray" 
            android:layout_above="@id/time_text"/>

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_gray" 
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/menubutton"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            android:layout_alignParentRight="true" 
            android:layout_alignParentBottom="true"
            android:onClick="onClick"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>