<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/blogButton"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/menubutton"
            android:text="@string/blog"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text" />

        <Button
            android:id="@+id/notesButton"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:background="@drawable/menubutton"
            android:text="@string/notes"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text" />

        <Button
            android:id="@+id/pictureButton"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/menubutton"
            android:text="@string/pictures"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/logoutbutton"
            android:text="@string/logout"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>
