
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
         android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/newEntreeButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:background="@drawable/menubutton"
                android:text="@string/new_entree"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text" />

            <Button
                android:id="@+id/blogButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:background="@drawable/menubutton_white"
                android:text="@string/menu"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/normal_text" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datum" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes" />

                <Button
                    android:id="@+id/openNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
