<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/dark_gray"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/large_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:background="@drawable/myinputfield"
            android:gravity="center"
            android:inputType="textPassword"
            android:text="@string/password"
            android:minWidth="200dp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="0.05"
            android:background="@drawable/loginbutton"
            android:onClick="onClick"
            android:text="@string/login"
            android:textColor="@color/white" 
            android:layout_margin="30dp" 
            android:minWidth="100dp"/>

    </LinearLayout>

</RelativeLayout>
